# pymoors

./: .gitignore  404.html  Cargo.toml  Makefile  README.md  development.html  getting_started.html  index.html  mkdocs.yml  pyproject.toml  wea.py
.cargo/: config.toml
.github/: deploy-docs.yaml
.github/workflows/: ci.yaml  codespeed.yaml  codspeed.yaml  deploy-docs.yaml  release.yaml
development/: index.html
docs/user_guide/: algorithms.md
docs/user_guide/algorithms/: nsga3.ipynb
getting_started/: index.html
python/dominance/: dominance.pyi  wea.py
python/pymoors/: __init__.py  _pymoors.pyi  _typing.py  dominance.pyi  errors.py  expression.py  helpers.py  schemas.py  typing.py
python/pymoors/core/: constant.py  crossover.py  expression.py  helpers.py  inequality.py  mutation.py  problem.py  variable.py
python/pymoors/modeling/: add.py  constant.py  matmul.py  mul.py  pow.py  variable.py
python/pymoors/population/: individual.py  population.py
src/: evaluator.rs  genetic.rs  helpers.rs  lib.rs  random.rs
src/algorithms/: agemoea.rs  macros.rs  mod.rs  nsga2.rs  nsga3.rs  rnsga2.rs
src/diversity_metrics/: reference.rs
src/duplicates/: close.rs
src/helpers/: duplicates.rs  extreme_points.rs  functions.rs  linalg.rs  mod.rs  parser.rs
src/non_dominated_sorting/: crowding_distance.rs  distance.rs  dominator.rs  mod.rs
src/operators/: evolve.rs  macros.rs  mod.rs  py_operators.rs  survival.rs
src/operators/crossover/: exponential.rs  mod.rs  order.rs  single_point.rs  uniform_binary.rs
src/operators/mutation/: binflip.rs  displacement.rs  gaussian.rs  mod.rs  scramble.rs  swap.rs
src/operators/sampling/: permutation.rs  random.rs
src/operators/selection/: mod.rs  (+3 more)
src/pymoors_core/: problem.rs
tests/: test_dominance.py  test_dominators.rs
tests/algorithms/: test_dtlz2.py  test_infeasibility.py  test_init.py  test_knapsack.py  test_small_real_biobj.py  test_tsp.py
tests/benchmarks/: test_algorithms_benchmark.py  test_distance_matrix_benchmark.py
tests/core/: test_crossover.py  test_problem.py  test_variable.py
tests/modeling/: test_variables.py
tests/operators/: test_mutation.py
user_guide/: duplicates.html  fitness_and_constraints.html  operators.html
user_guide/algorithms/: agemoea.html  algorithms.html  nsga2.html  nsga3.html  revea.html  rnsga2.html
user_guide/duplicates/: index.html
user_guide/fitness_and_constraints/: index.html
user_guide/operators/: index.html
(+30 files in other folders)
